--- a/lesson_9/css/style.css
+++ b/lesson_9/css/style.css
@@ -880,6 +880,7 @@
 .jewellery-1{
    padding-top: 32px;
    margin-right: 55px;
+   max-width: 334px;
 }
 
 .jewellery__border{
@@ -891,10 +892,9 @@
 }
 
 .jewellery__img{
-   width: 334px;
-   height: 381px;
+   width: 100%;
    margin-left: 10px;
-   padding-top: 9px
+   padding-top: 9px;
 }
 
 .product-name{
@@ -915,5 +915,9 @@
    font-size: 46px;
    line-height: 1.13;
    margin-bottom: 31px;
+   max-width: 339px;
+}
+
+.jewellery-2{
    max-width: 339px;
 }
