--- a/lesson_17/css/fonts.css
+++ b/lesson_17/css/fonts.css
@@ -1,2 +1,16 @@
 
 @import url("https://fonts.googleapis.com/css?family=Pixelify+Sans:regular&display=swap");
+
+/* maket 1 */
+
+@import url("https://fonts.googleapis.com/css?family=DM+Serif+Text:regular&display=swap");
+
+@import url("https://fonts.googleapis.com/css?family=Inter:regular,800&display=swap");
+
+/* maket 2 */
+
+@import url("https://fonts.googleapis.com/css?family=Cormorant+Infant:700&display=swap");
+
+/* maket 3 */
+
+@import url("https://fonts.googleapis.com/css?family=Raleway:500,600&display=swap");
