--- a/lesson_17/css/fonts.css
+++ b/lesson_17/css/fonts.css
@@ -11,6 +11,8 @@
 
 @import url("https://fonts.googleapis.com/css?family=Cormorant+Infant:700&display=swap");
 
+@import url("https://fonts.googleapis.com/css?family=Ubuntu:500&display=swap");
+
 /* maket 3 */
 
 @import url("https://fonts.googleapis.com/css?family=Raleway:500,600&display=swap");
