--- a/lesson_17/css/style.css
+++ b/lesson_17/css/style.css
@@ -454,14 +454,37 @@
    }
 
    .bestsellers-products__title {
-      font-size: 30px;
+      font-size: 35px;
+   }
+
+   .bestseller-card__title {
+      font-size: 26px;
+   }
+
+   .bestseller-card__price{
+      font-size: 24px;
    }
 
    .bestsellers-products__subtitle {
-      font-size: 20px;
+      font-size: 23px;
    }
 
    .bestsellers-products__link-button{
       padding: 10px 25px;
+   }
+}
+
+@media (max-width: 361px){
+   .bestsellers-products__title {
+      font-size: 30px;
+   }
+
+   .bestseller-card__title,
+   .bestseller-card__price {
+      font-size: 24px;
+   }
+
+   .bestsellers-products__subtitle {
+      font-size: 20px;
    }
 }
