--- a/lesson_18/css/individual.css
+++ b/lesson_18/css/individual.css
@@ -14,11 +14,10 @@
 }
 
 [class*="__container"] {
-   max-width: 1200px;
+   max-width: 1205px;
    padding: 0 15px;
    margin: 0 auto;
 }
-
 
 
 /* header */
@@ -29,7 +28,9 @@
    top: 0;
    left: 0;
    z-index: 50;
-   background-color: #fff;
+   font-family: "Merriweather", serif;
+   border-bottom: 1px solid rgba(131, 131, 131, 0.21);
+   background-color: #FFF9F4;
 }
 
 .header__container {
@@ -43,7 +44,6 @@
 
 .header__logo {
    color: #000;
-   font-family: "Merriweather", serif;
    font-size: 30px;
    font-style: italic;
    font-weight: 700;
@@ -65,16 +65,14 @@
 }
 
 .menu__link {
-   font-family: "Merriweather", serif;
    color: #000;
    font-size: 20px;
    line-height: 1;
-   transition: color 0.3s;
 }
+
 
 @media(any-hover: hover) {
    .menu__item:hover .menu__link {
-      color: #D58417;
       text-decoration-line: underline;
    }
 }
@@ -129,9 +127,9 @@
    width: 140%;
    border-radius: 10px;
    padding: 10px 5px;
-   background-color: #C38154;
+   background-color: #fff;
    text-align: center;
-   box-shadow: 3px 3px 15px rgba(255, 147, 74, 0.28);
+   box-shadow: 3px 3px 15px #185c6e;
 }
 
 .sub-menu__item:not(:last-child) {
@@ -139,9 +137,8 @@
 }
 
 .sub-menu__link {
-   color: #fff;
+   color: #0E333D;
    font-size: 17px;
-   font-family: "Merriweather", serif;
 }
 
 @media(any-hover: hover) {
@@ -157,48 +154,34 @@
 .actions-header {
    display: flex;
    align-items: center;
+   justify-content: center;
    gap: 23px;
    position: relative;
    z-index: 5;
 }
 
 .actions-header__item {
-   flex: 0 0 32px;
-   position: relative;
-   transition: transform 0.3s linear;
-}
-
-@media(any-hover: hover) {
-   .actions-header__item:hover {
-      transform: scale(1.1);
-   }
-}
-
-.actions-header__item img {
-   max-width: 100%;
-}
-
-.actions-header__item span {
-   position: absolute;
-   right: 0;
-   top: 0;
-   border-radius: 50%;
-   background-color: #FF3333;
-   width: 12px;
-   height: 12px;
+   padding: 13px 28px;
+   border-radius: 5px;
+   background-color: #0E333D;
    color: #fff;
-   font-size: 10px;
-   text-align: center;
-   line-height: 12px;
+   transition: box-shadow 0.2s linear;
+   font-size: 20px;
+   font-weight: 700;
+   line-height: 100%;
+}
+
+@media (any-hover: hover) {
+   .actions-header__item:hover {
+      box-shadow: 5px 5px 15px #185c6e;
+   }
 }
 
 .icon-menu {
    display: none;
 }
 
-
 /* --- */
-
 
 @media (max-width: 960px) {
    .header__container {
@@ -214,7 +197,7 @@
       left: -100%;
       transition: left 0.3s;
       padding: 80px 15px 30px;
-      background-color: #884A39;
+      background-color: #0E333D;
    }
 
    .menu__body::before {
@@ -226,7 +209,7 @@
       left: 100%;
       z-index: 2;
       transition: left 0.3s;
-      background-color: #C38154;
+      background-color: #0f6881;
    }
 
    .menu-open .menu__body,
@@ -242,6 +225,7 @@
 
    .menu__link {
       font-size: 27px;
+      color: #fff;
    }
 
    .menu__item--parent .menu__link {
@@ -322,272 +306,212 @@
       bottom: 50%;
       margin-bottom: -1px;
    }
+
+   .actions-header__item {
+      padding: 13px 30px;
+      font-size: 15px;
+      font-weight: 400;
+   }
 }
 
 @media (max-width: 440px) {
    .header__container {
-      gap: 5px;
+      gap: 10px;
    }
 
    .header__logo {
-      font-size: 24px;
+      font-size: 22px;
    }
 
    .actions-header {
       gap: 10px;
    }
+
+   .actions-header__item {
+      padding: 12px 25px;
+   }
 }
 
 
-/* main */
 
-.page {
-   display: flex;
-   flex-direction: column;
-   font-family: "Cormorant Infant";
-}
+/* --- page --- */
 
 .hero {
-   background-color: #502203;
-   color: #fff;
-   min-height: 100%;
-   flex-grow: 1;
-   padding: 200px 0 58px;
-   display: flex;
-   align-items: center;
-   position: relative;
+   background-color: #FFF9F4;
+   padding: 140px 0;
 }
-
-
-/* decor */
-
-.hero__decor {
-   display: none;
-}
-
-@media (min-width: 1530px) {
-   .hero__decor--img-right {
-      display: block;
-      position: absolute;
-      bottom: 55px;
-      right: -94px;
-      border-radius: 215px;
-      border: 1px solid #FFF;
-   }
-
-   .hero__decor--img-right img {
-      width: 100%;
-      height: 100%;
-      aspect-ratio: 237 / 337;
-      object-fit: cover;
-      margin: 17px 12px;
-   }
-}
-
-@media (min-width: 992px) {
-
-
-   .hero__decor--line-left {
-      display: block;
-      position: absolute;
-      width: 184px;
-      height: 422px;
-      top: 0;
-      left: -50px;
-      background: url(../img/screen-1/line-left.svg) 0 0 / cover no-repeat;
-   }
-
-   .hero__decor--img-left {
-      display: block;
-      position: absolute;
-      bottom: 5px;
-      left: 38px;
-      border-radius: 195px 195px 0px 0px;
-      border: 1px solid #FFF;
-   }
-
-   .hero__decor--img-left img {
-      width: 100%;
-      height: 100%;
-      border-radius: 195px 195px 0px 0px;
-      aspect-ratio: 239 / 215;
-      object-fit: cover;
-      margin: 5px -6px -5px 6px;
-   }
-
-   .hero__decor--line-right {
-      display: block;
-      position: absolute;
-      width: 191px;
-      height: 474px;
-      bottom: 150px;
-      right: 0;
-      background: url(../img/screen-1/line-right.svg) 0 0 / cover no-repeat;
-   }
-}
-
-/* --- */
-
 
 .hero__container {
-   flex: 1 1 auto;
    display: flex;
-   align-items: flex-start;
-}
-
-.hero__body>* {
-   margin-bottom: 9px;
-}
-
-.hero__title {
-   font-size: 78px;
-   font-weight: 700;
-   line-height: 129%;
-}
-
-.hero__button {
-   font-size: 24px;
-   font-weight: 600;
-   line-height: 100%;
-   /* 24px */
-   padding: 15px 25px;
-   border-radius: 4px;
-   border: 1px solid #FFF;
-   position: relative;
-}
-
-.hero__button::before {
-   content: "";
-   position: absolute;
-   width: 100%;
-   height: 100%;
-   top: 12px;
-   left: -8px;
-   border-radius: 4px;
-   background: rgba(255, 255, 255, 0.06);
-   transition: all 0.3s;
-}
-
-@media (any-hover: hover) {
-   .hero__button:hover::before {
-      top: 0;
-      left: 0;
-   }
-
-}
-
-.hero__body>*:last-child {
-   margin-bottom: 0;
-}
-
-.hero__image {
-   flex-shrink: 0;
-   flex-basis: 36.75%;
-   border-radius: 215px;
-   border: 1px solid #FFF;
-   padding: 20px;
-}
-
-.hero__image img {
-   width: 100%;
-   border-radius: 215px;
+   align-items: center;
+   gap: 30px;
 }
 
 .content-hero {
-   display: flex;
-   flex-direction: column;
-   align-self: stretch;
-   gap: 20px;
+   color: #727272;
+   font-family: "Inter", sans-serif;
+   font-size: 22px;
+}
+
+.content-hero__title {
+   color: #0E333D;
+   font-family: "DM Serif Text", serif;
+   font-size: 78px;
+   line-height: 127%;
+   margin-bottom: 32px;
 }
 
 .content-hero__text {
-   font-size: 22px;
-   font-weight: 700;
    line-height: 148%;
-   flex-grow: 1;
+   margin-bottom: 48px;
 }
 
-.content-hero__item {
-   font-size: 32px;
-   font-weight: 600;
-   line-height: 120%;
-   /* 38.4px */
-   border-left: 1px solid #fff;
-   padding-left: 10px;
+.content-hero__text p:not(:last-child) {
+   margin-bottom: 10px;
+}
+
+.action-hero {
+   margin-bottom: 30px;
+   display: flex;
+   gap: 40px;
+   align-items: center;
+   font-family: "DM Serif Text", serif;
+   font-size: 28px;
+   line-height: 100%;
+}
+
+.action-hero__button {
+   padding: 10px 38px;
+   color: #FFF;
+   line-height: 100%;
+   border-radius: 5px;
+   background-color: #0E333D;
+   transition: box-shadow 0.3s linear;
+}
+
+.action-hero__link {
+   color: #0E333D;
+   text-decoration-line: underline;
+   transition: text-shadow 0.3s linear;
+}
+
+@media (any-hover: hover) {
+   .action-hero__button:hover {
+      box-shadow: 5px 5px 15px #185c6e;
+   }
+
+   .action-hero__link:hover {
+      text-shadow: 5px 5px 15px #185c6e;
+   }
+}
+
+.content-hero>*:last-child {
+   margin-bottom: 0;
+}
+
+.img-hero {
+   display: flex;
+   flex: 0 0 50%;
+   min-height: 537px;
+   gap: 32px;
+}
+
+.img-hero__item img {
+   width: 100%;
+   height: 100%;
+   aspect-ratio: 245/467;
+   object-fit: cover;
+}
+
+.img-hero__item--left {
+   align-self: flex-end;
+}
+
+.img-hero__item--right {
+   align-self: flex-start;
 }
 
 
 /* --- */
-@media (max-width: 1200px) {
-   .hero__title {
-      font-size: 64px;
+
+@media (max-width: 1115px) {
+   .content-hero__title {
+      font-size: 58px;
    }
 }
 
-@media (max-width: 991.98px) {
+@media (max-width: 960px) {
    .hero {
-      padding: 150px 0 40px;
+      padding: 70px 0 40px;
    }
 
    .hero__container {
       flex-direction: column;
-      gap: 40px;
-      align-items: stretch;
    }
 
-   .hero__body {
+   .content-hero {
       text-align: center;
    }
 
-   .hero__image {
-      align-self: center;
+   .content-hero__title {
+      margin-bottom: 25px;
+      font-size: 45px;
+   }
+
+   .content-hero__text {
+      margin-bottom: 20px;
+      font-size: 20px;
+   }
+
+   .action-hero {
+      justify-content: center;
+      font-size: 25px;
+   }
+
+   .img-hero__item--left {
+      align-self: flex-start;
    }
 }
 
-@media (max-width: 960px) {
-   .hero {
-      padding: 90px 0 40px;
+@media (max-width: 535px) {
+   .content-hero__title {
+      font-size: 38px;
+      margin-bottom: 10px;
+   }
+
+   .content-hero__text {
+      font-size: 18px;
+   }
+
+   .action-hero {
+      font-size: 20px;
+      gap: 20px;
+   }
+
+   .img-hero {
+      min-height: auto;
    }
 }
 
-@media (max-width: 470px) {
-   .hero__title {
-      font-size: 46px;
-   }
-}
-
-@media (max-width: 960px) {
-   .hero {
-      padding: 90px 0 40px;
-   }
-}
-
-@media (min-width: 992px) {
-   .hero__body {
-      flex-basis: 31.625%;
-      flex-shrink: 0;
-      padding-top: 57px;
-      padding-right: 30px;
+@media (max-width: 457px) {
+   .content-hero__title {
+      font-size: 28px;
+      line-height: 1;
    }
 
-   .content-hero__item {
-      margin-bottom: 183px;
+   .content-hero__text {
+      font-size: 16px;
    }
 
-   .hero__content {
-      flex-basis: 31.625%;
-      padding-top: 76px;
-      padding-left: 23px;
-      flex-shrink: 0;
-   }
-
-   .content-hero__item {
-      align-self: flex-end;
+   .action-hero {
+      font-size: 18px;
    }
 }
 
 
-.footer{
+/* ------- */
+
+.footer {
    padding: 40px;
    font-family: "Pixelify Sans", sans-serif;
    font-size: 40px;
@@ -595,25 +519,25 @@
 }
 
 @media (any-hover: hover) {
-   .footer__link{
+   .footer__link {
       transition: color 0.3s linear;
    }
 
-   .footer__link:hover{
+   .footer__link:hover {
       color: blue;
    }
 }
 
 @media (max-width: 992px) {
-   .footer{
+   .footer {
       padding: 20px;
       font-size: 28px;
    }
 }
+
 @media (max-width: 520px) {
-   .footer{
-      padding: 25px  15px;
+   .footer {
+      padding: 25px 15px;
       font-size: 23px;
    }
 }
-
