--- a/lesson_18/css/fonts.css
+++ b/lesson_18/css/fonts.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Pixelify+Sans:regular&display=swap");
+
 /* макет 1 - 2 */
 
 /* Merriweather */
